# effort_engine

./: .gitignore  CMakeLists.txt  Doxyfile
documentation/html/: _2home_2kvark_2effort_project_2core_2source_2common_types_2local_time_2date_time_8h-example.html  annotated.html  classeff_1_1common__types_1_1DateTime-members.html  classeff_1_1common__types_1_1DateTime.html  classeff_1_1debug_1_1Log-members.html  classeff_1_1debug_1_1Log.html  classes.html  common__types_2meta_8h_source.html  common__types_2settings_8h_source.html  date__time_8h_source.html  debug_2meta_8h_source.html  debug_2settings_8h_source.html  dir_117231bfb7abc767a873f13681d72b90.html  dir_45ba188e9850a6115ee2d5f847341078.html  dir_49a93d2f8592921e8b51bcaca64fd56f.html  dir_71200b307430d8ac2c23dd661c3bbb2d.html  dir_8d214a0912986b653ac2a16110f82eba.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d0a5d1df428c70fd6ddfa0ebbbe0c313.html  engine_2meta_8h_source.html  engine_2settings_8h_source.html  essential__types_8h_source.html  examples.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graphic_2meta_8h_source.html  graphic_2settings_8h_source.html  index.html  log_8h_source.html  menudata.js  namespaceeff.html  namespaceeff_1_1common__types.html  namespaceeff_1_1common__types_1_1meta.html  namespaceeff_1_1common__types_1_1settings.html  namespaceeff_1_1debug.html  namespaceeff_1_1debug_1_1meta.html  namespaceeff_1_1debug_1_1settings.html  (+11 more)
documentation/html/search/: all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_2.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
documentation/latex/: _2home_2kvark_2effort_project_2core_2source_2common_types_2local_time_2date_time_8h-example.tex  annotated.tex  classeff_1_1common__types_1_1DateTime.tex  classeff_1_1debug_1_1Log.tex  dir_117231bfb7abc767a873f13681d72b90.tex  dir_45ba188e9850a6115ee2d5f847341078.tex  dir_49a93d2f8592921e8b51bcaca64fd56f.tex  dir_71200b307430d8ac2c23dd661c3bbb2d.tex  dir_8d214a0912986b653ac2a16110f82eba.tex  dir_d0a5d1df428c70fd6ddfa0ebbbe0c313.tex  examples.tex  namespaceeff.tex  namespaceeff_1_1common__types.tex  namespaceeff_1_1common__types_1_1meta.tex  namespaceeff_1_1common__types_1_1settings.tex  namespaceeff_1_1debug.tex  namespaceeff_1_1debug_1_1meta.tex  namespaceeff_1_1debug_1_1settings.tex  namespaceeff_1_1engine.tex  namespaceeff_1_1engine_1_1meta.tex  namespaceeff_1_1engine_1_1settings.tex  namespaceeff_1_1graphic.tex  namespaceeff_1_1graphic_1_1meta.tex  namespaceeff_1_1graphic_1_1settings.tex  namespaces.tex  refman.tex  structeff_1_1debug_1_1Log_1_1Settings.tex
engine/: main.cpp  meta.h  settings.h
env/: README.txt
source/common_types/: common_settings.h  essential_types.h  meta.h  settings.h
source/common_types/local_time/: date_time.cpp  date_time.h
source/debug/: meta.h  settings.h
source/debug/exception/: common_exceptions.cpp  common_exceptions.h
source/debug/logging/: log.cpp  log.h
source/engine/: main.cpp  meta.h  settings.h
source/graphic/: meta.h  settings.h
source/graphic/common/: meta.h  settings.h  settings_create.cpp
source/graphic/glfw_wrapers/: window.cpp  window.h
source/graphic/vulkan/core/: surface.cpp  surface.h  validation_layers.cpp  (+1 more)
